syntax = "proto3";

package user;

option go_package = "/proto"; // Khớp với import path trong main.go

service UserService {
  rpc GetUsersByIDs (GetUsersByIDsRequest) returns (GetUsersByIDsResponse);
}

message GetUsersByIDsRequest {
  repeated uint64 user_ids = 1;
}

message UserProfile {
  uint64 id = 1;
  string username = 2;
  string full_name = 3;
  string profile_picture_url = 4;
}

message GetUsersByIDsResponse {
  repeated UserProfile users = 1;
}